# gb-link-printer-firmware

./: .gitignore  CMakeLists.txt  README  gbprinter.uf2  main.c  usb_descriptors.c
pio/: pio_secondary.c  pio_secondary.h  secondary.pio
